<resources>
    <string name="app_name">> Detect</string>
    <string name="action_settings">Settings</string>
    <string name="action_clear">Clear events</string>
    <string name="action_authenticate">Server authentication</string>
    <string name="clear_saved_location">Clear saved location</string>
    <string name="save_location">Save location</string>
    <string name="clear_location">Clear location</string>
    <string name="are_you_home">Are you home ?</string>
    <string name="authenticate_logout">If you logout data won\'t be send to the server anymore</string>
    <string name="authenticate_signup">To be able to store events on the server directly single sign up. If you say no, data will stay locally on your phone</string>
    <string name="i_am_home">I am home</string>
    <string name="come_home">Come home</string>
    <string name="leave_home">Leave home</string>
    <string name="i_left_home">I left</string>
    <string name="no_history_yet">No history yet!</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_maps">Map</string>
    <string name="select_home_location">Select home location</string>
    <string name="select_later_house_dialog">When you will be home, please select your home location by going to "Map" and by clicking on your home location</string>
    <string name="select_house_dialog">After accepting permissions, validate current location (green check) or click somewhere else to set your home location. Don\'t forget to validate by clicking on green check, this will add the geofence. At anytime you can clear the current location and reset it (menu)</string>
    <string name="permission_granted">Location permission granted: looking for current position</string>
    <string name="autostarted_dialog">Your phone constructor seems to prevent app autostart, we need autostart so if your phone reboot you don"t have to restart the app to register geofence. Do you want to check if app autostart is allowed ?</string>
    <string name="permission_denied">Location permission denied: can\'t get current position</string>
    <string name="enable_permission">Please enable location permission in application settings</string>
    <string name="fix">Fix</string>
    <string name="current_saved_position">Current saved position</string>
    <string name="home_position_question">Home position?</string>
    <string name="navigation_event">Events</string>
    <string name="navigation_map">Map</string>
    <string name="geofencing_added_succeed">Geofencing added succeed!</string>
    <string name="geofencing_added_failed">Geofencing added failed!</string>
    <string name="geofencing_added_removed">Geofencing removed</string>
    <string name="geofencing_permission_issue">You need to accept the permissions for geofencing to work</string>
    <string name="geofencing_cancelled">Geofencing cancelled</string>
    <string name="geofencing_error">Geofencing error: </string>
    <string name="no_home_set">No home set</string>
    <string name="geofecing_registration">Geofencing registration</string>
    <string name="geofecing">Geofencing</string>
    <string name="geofecing_already_registered">Geofencing already registered</string>
    <string name="changing_radius_message">Choose radius in meters:</string>
    <string name="changing_radius_title">Set geofencing radius</string>
    <string name="changing_initial_trigger_title">Set geofencing initial trigger</string>
    <string name="changing_initial_trigger_message">Sets the geofence notification behavior at the moment when geofence is added</string>
    <string name="changing_initial_trigger_current">Current is: </string>
    <string name="initial_trigger_enter">When already inside</string>
    <string name="initial_trigger_exit">When already outside</string>
    <string name="authentication_succeed">Authentication succeed</string>
    <string name="logout">Logout from server</string>
    <string name="ask_home_located">Where your home is located?</string>
    <string name="ask_home_type">What kind of home do you have?</string>
    <string name="flat">A flat</string>
    <string name="house">A house</string>
    <string name="city">In a city</string>
    <string name="countryside">In a countryside</string>
    <string name="background_location_permission_title">Background Permission Needed</string>
    <string name="background_location_permission_message">For your app to detect that you left even if the app is not started please on the next screen select: </string>
    <string name="enable_location">Please enable your location services</string>
    <string name="app_optimized_title">Battery Optimization issue</string>
    <string name="app_optimized_message">Please unoptimized this app to make it work properly in background</string>
    <string name="permission_refused">If you don\'t grant all the required permission the app won\'t work correctly</string>
    <string name="unoptimization_refused">If you don\'t unoptimized the app it won\'t work properly in background</string>
    <string name="grant">Grant</string>
</resources>
