<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_set_radius"
        android:title="@string/changing_radius_title"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_set_geofencing_initial"
        android:title="@string/changing_initial_trigger_title"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_clear_current"
        android:title="@string/clear_saved_location"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_clear_tmp"
        android:icon="@drawable/ic_remove"
        android:title="@string/clear_location"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_validate_tmp"
        android:icon="@drawable/ic_check"
        app:showAsAction="ifRoom"
        android:title="@string/save_location" />
</menu>
