<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.ghostwan.sample.geofencing.ui.MainActivity">

    <item
        android:id="@+id/action_clear_current"
        android:icon="@drawable/ic_delete"
        android:title="@string/clear_saved_location"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_clear_tmp"
        android:icon="@drawable/ic_remove"
        android:title="@string/clear_location"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_validate_tmp"
        android:icon="@drawable/ic_check"
        app:showAsAction="ifRoom"
        android:title="@string/save_location" />
</menu>
